@@ -6,6 +6,9 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
+5th April 2021
+- USER (Dev) - Runs on ScanImage Basic
+
 
 26th March 2021
 - USER (Dev) - Bugfix: Section start number is correctly displayed in Acq view immediately when resuming.
